--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,45 @@
 version: '3.8'
 
 services:
-  api_nginx:
-    container_name: api_nginx
-    image: nginx
-    volumes:
-      - ./_docker/nginx/conf.d/:/etc/nginx/conf.d/
-      - ./:/var/www/
-    ports:
-      - 8080:80
-    depends_on:
-      - api_app
+    api_nginx:
+        container_name: api_nginx
+        image: nginx
+        volumes:
+            - ./_docker/nginx/conf.d/:/etc/nginx/conf.d/
+            - ./:/var/www/
+        ports:
+            - 8080:80
+        depends_on:
+            - api_app
 
-  api_app:
-    container_name: api_app
-    build:
-      context: .
-      dockerfile: _docker/app/Dockerfile
-    volumes:
-      - ._doker/conf.d/:/etc/nginx/conf.d/
-      - ./:/var/www/
-    depends_on:
-      - api_db
+    api_app:
+        container_name: api_app
+        build:
+            context: .
+            dockerfile: _docker/app/Dockerfile
+        volumes:
+            - ._doker/conf.d/:/etc/nginx/conf.d/
+            - ./:/var/www/
+        depends_on:
+            - api_db
 
-  api_db:
-    container_name: api_database
-    image: mysql:9.0
-    restart: always
-    volumes:
-      - ./tmp/db/:/var/lib/mysql
-    environment:
-      MYSQL_DATABASE: learning_math
-      MYSQL_ROOT_PASSWORD: root
-    ports:
-      - 8101:3306
-    command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
+    api_db:
+        container_name: api_database
+        image: mysql:9.0
+        restart: always
+        volumes:
+            - ./tmp/db/:/var/lib/mysql
+        environment:
+            MYSQL_DATABASE: learning_math
+            MYSQL_ROOT_PASSWORD: root
+        ports:
+            - 8101:3306
+        command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
+
+    adminer:
+        image: adminer
+        restart: always
+        environment:
+            ADMINER_DEFAULT_SERVER: api_database
+        ports:
+            - "8086:8080"
