--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
         "filament/filament": "^3.2",
         "guzzlehttp/guzzle": "^7.0",
         "laravel/framework": "^11.9",
+        "laravel/reverb": "^1.0",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
